Added to the Index and Home

--- a/index.html
+++ b/index.html
@@ -2,3 +2,9 @@
 layout: home
 # Index page
 ---
+
+## Welcome!
+
+Thanks for visiting my site. I'm using this space to share my thoughts, projects, and resources.
+
+Stay tuned for more updates!
